# ensembles-app

./: .all-contributorsrc  .buildconfig  .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  com.github.ensemblesaw.ensembles.yml  com.github.subhadeepjasu.ensembles.yml  meson.build  meson_options.txt
data/: Application.css  com.github.ensemblesaw.ensembles.appdata.xml.in  com.github.ensemblesaw.ensembles.desktop.in  com.github.ensemblesaw.ensembles.kiosk.desktop  com.github.subhadeepjasu.ensembles.appdata.xml.in  com.github.subhadeepjasu.ensembles.desktop.in  com.github.subhadeepjasu.ensembles.gresource.xml  com.github.subhadeepjasu.ensembles.gschema.xml  com.github.subhadeepjasu.ensembles.gschema.xml.in  com.github.subhadeepjasu.ensembles.kiosk.desktop  meson.build
data/Fonts/Exo2/: README.txt
data/Fonts/Michroma/: OFL.txt
data/Images/Instruments/: AUTHORS
data/MetronomesAndLFO/: 3.mtlfo  3.rg  4.mtlfo  4_4.mtlfo  4_4.rg
data/RoseGardenDevices/: *.rgd  Ensembles.rgd
data/SoundFonts/: EnsemblesGM.sf2  EnsemblesGMSchema.csv  README.md  Synthia_Revamped_GM.sf2  meson.build
data/SoundFonts/FluidR3/: ClubDance1mid.mid  FluidR3_GM.sf2  FluidR3_GS.sf2
data/Styles/: BallRoom@Waltz.enstl  BallRoom@Waltz.rg  DancePop_01.mid  DancePop_01.rg  EDM@Dance_Pop.enstl  EDM@Dance_Pop.rg  EDM@Dance_Pop_1.enstl  EDM@Dance_Pop_1.rg  EDM@Progressive_House.enstl  Pop@16bt_Ballad.enstl  Pop@16bt_Ballad.rg  README.md
data/Styles/StyleFiles/: BallRoom@Waltz.enstl  Ball_Room@French_Waltz.enstl  EDM@Dance_Pop.enstl  EDM@Disco_Pop.enstl  EDM@Progressive_House.enstl  EDM@Trance.enstl  Indian_Classical@Teen_Taal.enstl  Pop@16_Beat_Ballad.enstl  Pop@16_Beat_Ballad.mid  Pop@16bt_Ballad.enstl  Pop@16bt_Funk.enstl  Pop@Acoustic_8_Beat.enstl  Pop@R&B_Funk.enstl  Rock@12_Bt_Pop_Rock.enstl
data/Styles/rg/: BallRoom@Waltz.rg  Ball_Room@French_Waltz.rg  EDM@Dance_Pop.rg  EDM@Disco_Funk.rg  EDM@Disco_Pop.rg  EDM@Dream_DJ.rg  EDM@Ground_R&B.rg  EDM@Progressive_House.rg  EDM@Retro_Disco.rg  EDM@Trance.rg  Indian_Classical@Teen_Taal.rg  Pop@12_Bt_Pop_Rock.rg  Pop@16_Beat.rg  Pop@16_Beat_Ballad.rg  Pop@16_Beat_Shuffle.rg  Pop@16bt_Ballad.rg  Pop@16bt_Funk.rg  Pop@8_Beat_Ballad.rg  Pop@Acoustic_8_Beat.rg  Pop@Guitar_Pop.rg  Pop@Modern_16_Bt_Ballad.rg  Pop@Modern_8_Beat.rg  Pop@Oldies_8_Beat.rg  Pop@Pop_Star.rg  Pop@R&B_Funk.rg  Pop@Uptempo_8_Beat.rg  README.md  Rock@12_Bt_Pop_Rock.rg  Rock@6-8_Rock.rg  StyleList.md  World@Indian_Pop.rg
data/Themes/: Application.css  DisplayUnit.css  DisplayUnitAurora.css  DisplayUnitElementary.css  DisplayUnitElementaryDark.css  DisplayUnitElementaryLight.css
data/Themes/Display/: Display.css
src/: Application.vala  Config.vala.in  Main.vala  Services.vala  Settings.vala  Utils.vala  main.c  meson.build
src/Core/: Arpeggiator.vala  ArrangerCore.vala  ArrangerWorkstation.vala  CentralBus.vala  Controller.vala  DriverSettingsProvider.vala  EffectRack.vala  Harmonizer.vala  InstrumentRack.vala  MetronomeLFOPlayer.vala  MidiRecorder.vala  RealTimePlay.vala  Registry.vala  SamplePlayer.vala  SampleRecorder.vala  SongPlayer.vala  Style.vala  StyleAnalyser.vala  StyleDiscovery.vala  StylePlayer.vala  Synthesizer.vala  Voice.vala  VoiceAnalyser.vala  central_bus.c  central_bus.h  channel_multiplexer.c  channel_multiplexer.h  chord_finder.c  chord_finder.h  controller.c  driver_settings_provider.c  driver_settings_provider.h  effect_rack.c  effect_rack.h  metronome_lfo_player.c  music_player.c  realtime_play.c  style_analyser.c  style_analyser.h  style_player.c  (+5 more)
src/Core/Analysers/: ChordAnalyser.vala  StyleAnalyser.vala  VoiceAnalyser.vala
src/Core/AudioEngine/: SynthProvider.vala  SynthSettingsPresets.vala  Synthesizer.vala
src/Core/Automators/: Arpeggiator.vala  Harmonizer.vala
src/Core/ChoppingBlock/: CentralBus.vala  central_bus.c  central_bus.h
src/Core/FileLoaders/: StyleFileLoader.vala
src/Core/MIDIPlayers/: StyleEngine.vala
src/Core/MidiInput/: MidiInputHost.vala  midi_input_host.c  midi_input_host.h
src/Core/MidiRecorder/: MidiEvent.vala  MidiRecorder.vala  PlayBackObject.vala
src/Core/PluginRacks/: EffectRack.vala  InstrumentRack.vala
src/Core/Plugins/: Plugin.vala  PluginManager.vala
src/Core/Racks/: DSPRack.vala  Rack.vala  VoiceRack.vala
src/Core/SamplingPads/: SamplePlayer.vala  SampleRecorder.vala
src/Core/StateRegistry/: Registry.vala
src/Core/Synthesizer/: SynthInstanceProvider.vala  SynthManager.vala  SynthProvider.vala  SynthSettingsPresets.vala  SynthSettingsProvider.vala  Synthesizer.vala  synthesizer.c  synthesizer.h
src/Core/Utils/: AudioDriverSniffer.vala  chord_finder.c  chord_finder.h
src/Core/VoiceManager/: Voice.vala  VoiceAnalyser.vala  voice_analyser.c  voice_analyser.h
src/Interfaces/: MediaKeyListener.vala  SoundIndicator.vala
src/Models/: Chord.vala  MIDIMarker.vala  Registry.vala  Style.vala  StylePart.vala  Voice.vala
src/PlugIns/: AtomPort.vala  ControlPort.vala  PlugIn.vala  PlugInAtom.vala  PlugInControl.vala  PlugInManager.vala
src/PlugIns/LV2/: LV2Constants.vala  LV2Manager.vala  LV2Plugin.vala  LV2URID.vala  SyMap.vala
src/Services/: EventBus.vala  Settings.vala  Theme.vala
src/Shell/: Application.vala  MainWindow.vala  application.c  application.h  main_window.c  main_window.h
src/Shell/Common/: DeviceItem.vala  Dial.vala  EffectItem.vala  EqualizerBar.vala  Key.vala  KeyboardConstants.vala  Knob.vala  MasterKnob.vala  OctaveKeyboard.vala  PcKeyboardHandler.vala  RecorderTrackItem.vala  StyleItem.vala  SuperKnob.vala  ToggleSwitch.vala  VoiceItem.vala
src/Shell/Dialogs/: ErrorDialog.vala  MIDIAssignDialog.vala  PowerDialog.vala
src/Shell/Display/: CentralDisplay.vala  ChannelModulatorScreen.vala  EffectRackScreen.vala  HomeScreen.vala  LFOEditScreen.vala  MainDisplayCasing.vala  RecorderScreen.vala  StyleMenu.vala  TempoScreen.vala  VoiceMenu.vala  WheelScrollableWidget.vala
src/Shell/Layouts/: AppMenuView.vala  (+26 more)
src/Utils/: AccentColors.vala  Console.vala  DisplayTheme.vala  ErrorDomains.vala  MIDI.vala  Math.vala  StyleMIDIModifiers.vala  Utils.vala
(+133 files in other folders)
