project (
    'com.github.subhadeepjasu.ensembles',
    version: '0.0.1',
)


install_data(
    'EnsemblesGM.sf2',
    install_dir: join_paths(get_option('datadir'), meson.project_name(), 'SoundFonts')
)

install_data(
    'EnsemblesGMSchema.csv',
    install_dir: join_paths(get_option('datadir'), meson.project_name(), 'SoundFonts')
)